syntax = "proto3";

package cosmosmessenger.cosmosmessenger;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmosmessenger/cosmosmessenger/params.proto";
import "cosmosmessenger/cosmosmessenger/message.proto";

option go_package = "cosmos-messenger/x/cosmosmessenger/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos-messenger/cosmosmessenger/params";
  
  }
  
  // Queries a list of ShowSentMessages items.
  rpc ShowSentMessages (QueryShowSentMessagesRequest) returns (QueryShowSentMessagesResponse) {
    option (google.api.http).get = "/cosmos-messenger/cosmosmessenger/show_sent_messages/{user}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryShowSentMessagesRequest {
  string                                user       = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryShowSentMessagesResponse {
  Message                                message    = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

